feat: added support to request and update user passwords (recover account)
