# src/docs/swagger-spec.doc.json
@@ -638,6 +638,26 @@
           }
         }
       }
+    },
+    "/api/v1/accounts/forgot-password": {
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/v1/accounts/update-credentials": {
+      "patch": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
     }
   },
   "components": {
